@@ -36,7 +36,7 @@
 
     <div class='row-fluid'>
       <h4>Content</h4>
-      <pre>{{ context.content.hyperlinked }}</pre>
+      <pre>{{ context.content.hyperlinked|u }}</pre>
     </div>
   {% endif %}
 
